# hobbs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  config.toml.sample  docker-compose.yml
.github/workflows/: ci.yml
data/: hobbs.db-shm  hobbs.db-wal
docs/: 01_overview.md  02_architecture.md  04_database.md  05_protocol.md  06_screens.md  07_security.md  08_script_plugin.md  08_web_ui.md  implementation_plan.md  operation_guide.md
docs/03_features/: 01_auth.md  02_board.md  03_files.md  04_chat.md  05_mail.md  06_admin.md  07_customization.md  08_rss.md
examples/scripts/: README.md  dice.lua  fortune.lua  hello.i18n.toml  hello.lua  janken.i18n.toml  janken.lua  number_guess.lua  omikuji.lua  quiz.lua
locales/: en.toml  ja.toml
migrations/: 0004_threads.sql  0007_chat_logs.sql  0014_script_logs.sql  0018_rss_read_positions.sql
migrations/postgres/: 0001_initial_users.sql  0003_boards.sql  0004_threads.sql  0005_posts.sql  0006_read_positions.sql  0007_chat_logs.sql  0008_mails.sql  0009_folders.sql  0010_files.sql  0012_scripts.sql  0013_script_data.sql  0014_script_logs.sql  0015_script_i18n.sql  0016_rss_feeds.sql  0017_rss_items.sql  0018_rss_read_positions.sql  0019_add_auto_paging.sql  0020_refresh_tokens.sql  0021_username_nocase.sql  0022_rss_feeds_per_user.sql  0023_one_time_tokens.sql  0024_invalidate_plaintext_tokens.sql  0025_add_board_disable_paging.sql
migrations/sqlite/: 0001_initial_users.sql  0002_add_encoding.sql  0003_boards.sql  0005_posts.sql  0006_read_positions.sql  0008_mails.sql  0009_folders.sql  0010_files.sql  0012_scripts.sql  0013_script_data.sql  0015_script_i18n.sql  0016_rss_feeds.sql  0017_rss_items.sql  0019_add_auto_paging.sql  0020_refresh_tokens.sql  0021_username_nocase.sql  0022_rss_feeds_per_user.sql  0023_one_time_tokens.sql  0024_invalidate_plaintext_tokens.sql  0025_add_board_disable_paging.sql
src/: config.rs  datetime.rs  error.rs  lib.rs  logging.rs  main.rs  rate_limit.rs
src/admin/: board.rs  content.rs  folder.rs  mod.rs  session.rs  user.rs
src/app/: menu.rs  mod.rs  session_handler.rs
src/auth/: mod.rs  password.rs  permission.rs  profile.rs  registration.rs  session.rs  validation.rs
src/board/: mod.rs  post.rs  post_repository.rs  repository.rs  service.rs  thread.rs  thread_repository.rs  types.rs  unread.rs
src/chat/: command.rs  log.rs  manager.rs  mod.rs  room.rs
src/db/: mod.rs  one_time_token.rs  refresh_token.rs  repository.rs  repository_traits.rs  schema.rs  traits.rs  user.rs
src/file/: folder.rs  metadata.rs  mod.rs  service.rs  storage.rs
src/i18n/: mod.rs
src/mail/: mod.rs  repository.rs  service.rs  system.rs  types.rs
src/rss/: fetcher.rs  mod.rs  repository.rs  service.rs  types.rs  updater.rs
src/screen/: ansi.rs  mod.rs  plain.rs
src/script/: api.rs  data_repository.rs  engine.rs  input_bridge.rs  loader.rs  (+6 more)
tests/: concurrency_test.rs  e2e_admin.rs  e2e_auth.rs  e2e_board.rs  e2e_connection.rs  e2e_encoding.rs  e2e_login_settings.rs  e2e_mail.rs  e2e_profile_settings.rs  encoding_e2e.rs  server_integration.rs  telnet_integration.rs  web_api_admin.rs  web_api_auth.rs  web_api_board.rs  web_api_e2e.rs  web_api_file.rs  web_api_mail.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
(+139 files in other folders)
