[package]
name = "hobbs"
version = "0.1.0"
edition = "2021"
description = "Hobbyist Bulletin Board System - A retro BBS host program accessible via Telnet"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[dev-dependencies]
