[package]
name = "hobbs"
version = "0.1.0"
edition = "2021"
description = "Hobbyist Bulletin Board System - A retro BBS host program accessible via Telnet"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
rand = "0.9.2"
mlua = { version = "0.10", features = ["lua54", "async", "serialize"] }
# xmodem = "0.4" # Using custom async implementation instead

[dev-dependencies]
tempfile = "3"
