[package]
name = "hobbs"
version = "0.1.0"
edition = "2021"
description = "Hobbyist Bulletin Board System - A retro BBS host program accessible via Telnet"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
rand = "0.9.2"
mlua = { version = "0.10", features = ["lua54", "async", "serialize", "vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate"] }
feed-rs = "2.3"
url = "2"
urlencoding = "2"
# xmodem = "0.4" # Using custom async implementation instead

# Web UI
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header", "compression-gzip"] }
jsonwebtoken = "9"
governor = "0.6"
mime_guess = "2"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
axum-test = "16"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22"
